# neurospec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
neurospec/: __init__.py  cli.py
neurospec/catalog/: __init__.py  builder.py  extractor.py  labeler.py
neurospec/compiler/: __init__.py  compiler.py  resolver.py  serializer.py
neurospec/core/: __init__.py  config.py  types.py
neurospec/dsl/: __init__.py  ast_nodes.py  lexer.py  parser.py  tokens.py  validator.py
neurospec/forge/: __init__.py  probes.py  reward.py  trainer.py
neurospec/marketplace/: __init__.py  composer.py  registry.py  versioning.py
neurospec/monitor/: __init__.py  dashboard.py  detector.py  guardian.py  tracker.py
neurospec/runtime/: __init__.py  actions.py  engine.py  hooks.py  sae_wrapper.py  serving.py
specs/examples/: composed_assistant.ns  honest_coder.ns  safe_medical_assistant.ns
