[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurospec"
version = "0.1.0"
description = "The Behavioral Compiler for Neural Networks. Declare what you want a model to BE, compile it to what it DOES internally."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "NeuroSpec Contributors"},
]
keywords = [
    "interpretability",
    "sparse-autoencoder",
    "SAE",
    "feature-steering",
    "AI-safety",
    "mechanistic-interpretability",
    "behavioral-specification",
    "model-alignment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
core = [
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors>=0.4",
]
labeling = [
    "openai>=1.0",
    "anthropic>=0.30",
    "tqdm>=4.60",
]
runtime = [
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors>=0.4",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
]
monitor = [
    "rich>=13.0",
]
forge = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
]
all = [
    "neurospec[core,labeling,runtime,monitor,forge]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
neurospec = "neurospec.cli:main"

[project.urls]
Homepage = "https://github.com/yurekami/neurospec"
Repository = "https://github.com/yurekami/neurospec"
Documentation = "https://github.com/yurekami/neurospec#readme"
Issues = "https://github.com/yurekami/neurospec/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
